# comm4190_F25_Final_Project

./: FinalIdea.ipynb  PromptDevelopment.ipynb  README.md  api.py  compress_video.py  introduction.md  joy_idea.md  joy_scenarios.md  lib.py  main.py  parsa_idea.md  pyproject.toml
frontend/: package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: ChatInput.tsx  ChatMessage.tsx  ConversationsList.tsx  ProfilePanel.tsx  ProfileSetup.tsx
frontend/src/components/ui/: button.tsx
ideas/: FinalIdea.ipynb  eric_idea.md  parsa_idea.md
static/: index.html
static/assets/: index-BHXrPuOQ.css  index-C5v64n5o.js  index-DG63AMkx.js  index-DT5QKIU8.css  index-DsFIFfv6.css  index-V58bA0az.js
