[project]
name = "comm4190-f25-final-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.124.4",
    "numpy>=2.3.5",
    "openai>=2.11.0",
    "ruff>=0.14.9",
]

[tools.ruff.lint]
select = ["ALL"]
